update(SD-73): Update spec & tests
